--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,11 +47,11 @@ jobs:
           echo "$HOME/.sonar/build-wrapper-linux-x86" >> $GITHUB_PATH
       - name: Install dependencies
         run: |
-          sh ci/debian/before_install.sh 5.3
+          sh ci/debian/before_install.sh $GITHUB_PATH 5.3
       - name: Run build-wrapper
         run: |
           mkdir build
-          cmake -S . -B build -DSFCGAL_BUILD_TESTS=ON -DCGAL_DIR=CGAL-5.3
+          cmake -S . -B build -DSFCGAL_BUILD_TESTS=ON -DCGAL_DIR=$GITHUB_PATH/CGAL-5.3
           build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} cmake --build build/ --config Release
       - name: Run sonar-scanner
         env:
