more sonar prop

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,15 @@ sonar.projectKey=lbartoletti_SFCGAL_CI
 sonar.organization=lbartoletti
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=SFCGAL_CI
-#sonar.projectVersion=1.0
+sonar.projectName=SFCGAL_CI
+sonar.projectVersion=1.4.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+sonar.python.version=3
+sonar.cfamily.threads=4
+sonar.cfamily.cache.enabled=true
+sonar.cfamily.cache.path=./cache
