--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,10 +48,12 @@ jobs:
       - name: Install dependencies
         run: |
           sh ci/debian/before_install.sh $GITHUB_PATH 5.3
+          ls
+          pwd
       - name: Run build-wrapper
         run: |
           mkdir build
-          cmake -S . -B build -DSFCGAL_BUILD_TESTS=ON -DCGAL_DIR=$GITHUB_PATH/CGAL-5.3
+          cmake -S . -B build -DSFCGAL_BUILD_TESTS=ON -DCGAL_DIR=$GITHUB_PATH/CGAL
           build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} cmake --build build/ --config Release
       - name: Run sonar-scanner
         env:
